--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <div id="wrapper">
         <div id="main">
             <form action="https://www.google.com/search" method="get" target="_blank" id="search-form">
-                <label for=""><img src="logo.png" alt=""> </label>
+                <label for=""><img src="logo.png" alt=""> 
+
                 <br>
                 <input name="q" type="text" placeholder="Google search..." autocomplete="off" autofocus>
-                
+                <h4>Disclaimer:</h4>
+                <h4>Educational eddition, but you can <i>search Googgle</i>  and see if it worked
+                </h4></label>
               </form>
         </div>
         </div>
