--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    
+<!-- 
+    noformejums pa vidu lapai -->
     
     <div id="wrapper">
         <div id="main">
