--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 <!-- 
     noformejums pa vidu lapai -->
-    
+
+    <!-- google image  -->
     <div id="wrapper">
         <div id="main">
             <form action="https://www.google.com/search" method="get" target="_blank" id="search-form">
